--- a/templates/_partials/_head.html.twig
+++ b/templates/_partials/_head.html.twig
@@ -4,12 +4,10 @@
    and uncomment the following Encore helpers to start using Symfony UX #}
 {% block stylesheets %}
     {#{{ encore_entry_link_tags('app') }}#}
-
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- THEME assets importation -->
-
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff" rel="stylesheet">
@@ -29,11 +27,10 @@
     <link rel="stylesheet" href="{{ asset('theme/css/icomoon.css') }}" />
     <link rel="stylesheet" href="{{ asset('theme/css/style.css') }}" />
 
-
     <!-- TIPS DATATABLE jquery integration -->
     <link rel="stylesheet" href="//cdn.datatables.net/1.11.0/css/jquery.dataTables.min.css"/> 
 
-
+    {# Fontawesome #}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/> 
     
     {# CSS custom #}
@@ -42,14 +39,6 @@
 
     <link rel="stylesheet" href="{{ asset('css/default.css') }}"/> 
     <link rel="stylesheet" href="{{ asset('css/entities-list.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('css/picture-form.css') }}"/>
-
-
-    
-
-{% endblock %}
-
-{% block javascripts %}
-    {#{{ encore_entry_script_tags('app') }}#}
+    <link rel="stylesheet" href="{{ asset('css/picture-form.css') }}"/> 
 
 {% endblock %}
