--- a/templates/_partials/components/_header.html.twig
+++ b/templates/_partials/components/_header.html.twig
@@ -1,4 +1,4 @@
-
+{# not sure if it's called somewhere... #}
 
 {% if currentPlant is defined %}
 <section class="ftco-section ftco-bread" style="background-image: url({{ asset('uploads/avatars/' ~ currentPlant.cover) }})">
