--- a/templates/_partials/components/_menu-connected.html.twig
+++ b/templates/_partials/components/_menu-connected.html.twig
@@ -1,6 +1,8 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-    {% if user is defined %}
-        <h1 id="colorlib-logo"><a href="index.html">
+
+{# AVATAR THUMBNAIL #}
+{% if user is defined %}
+        <h1 id="colorlib-logo"><a href="{{ path('dashboard_profile') }}">
             {% if oldAvatarFile is defined %}
                 <span class="img" style="background-image: url({{ asset('uploads/avatars/' ~ oldAvatarFile) }});"></span>
             {% else %}
@@ -12,7 +14,7 @@
 {% endif %}
 
 
-
+{# MENU ITEMS #}
 <!-- STEP navbar -->
 <nav id="colorlib-main-menu" role="navigation">
     <ul>
@@ -24,7 +26,7 @@
         <li><a href="{{ path('dashboard_plants') }}">My plants</a></li>
         <li><a href="{{ path('security_logout') }}">Logout</a></li>
 
-        {# If he's not, show the login button  #}
+        {# If he's not, show the login button //useless here  #}
         {% else %}
         <li><a href="{{ path('security_login') }}">Login</a></li>
         <li><a href="{{ path('member_signup') }}">Sign up</a></li>
