--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,7 +1,19 @@
 {% extends 'default.html.twig' %}
 
+{% block title %}
+    Page not found
+{% endblock %}
+
 {% block body %}
-<h1>caca boudin</h1>
 <!-- DOC TEMPLATE OVERRIDE https://symfony.com/doc/current/bundles/override.html#templates -->
-<!-- pour tester : http://localhost/lettuce-seed/public/_error/404 -->
+<!-- dev access : http://localhost/lettuce-seed/public/_error/404 -->
+
+    <h1><i class="fas fa-tree"></i> Looks like you lost yourself too deep in the wood  </h1>
+    
+    <h2>
+        Follow this 
+            <a href="{{ path('dashboard_profile') }}">path</a>
+        to come back home.
+    </h2>
+
 {% endblock %}
