--- a/templates/dashboard/_partials/_profile-edit-form.html.twig
+++ b/templates/dashboard/_partials/_profile-edit-form.html.twig
@@ -1,11 +1,12 @@
 {{ form_start(form) }}
     {{ form_row(form.email) }}
     {{ form_row(form.username) }}
-    {{ form_row(form.avatar) }}
-        {% if oldAvatarFile is empty == false %}
-            <img src="{{ asset('uploads/avatars/' ~ oldAvatarFile) }}"/>
-        {% endif %}     
     {{ form_row(form.password) }} 
     {{ form_row(form.oldPassword) }}  
+    {{ form_row(form.avatar) }}
+        {% if oldAvatarFile is empty == false %}
+            <a href="{{ path('dashboard_avatar_delete') }}"> <i class="fas fa-times"></i> Remove avatar</a>
+            <img src="{{ asset('uploads/avatars/' ~ oldAvatarFile) }}"/>
+        {% endif %}     
     <button class="button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
