--- a/templates/dashboard/picture/show.html.twig
+++ b/templates/dashboard/picture/show.html.twig
@@ -11,35 +11,34 @@
     {% endfor %}
 {% endblock %}
 
+
 {% block title %}Picture of {{selectedPlant.name}}{% endblock %}
+
 
 {% block body %}
     {% set route_parameters = app.request.attributes.get('_route_params') %}    
 
     <div class="return">
-        <a class="button" href="{{ path('dashboard_plant_pictures', {'plantId' : selectedPlant.id}) }}">Back to {{selectedPlant.name}} photos</a>
+        <a class="button" href="{{ path('dashboard_plant_pictures', {'plantId' : selectedPlant.id}) }}">Back to the gallery</a>
     </div>
 
     <h1>Picture of {{selectedPlant.name}}</h1>
-    {# mettre directement la photo, ou le nom s'il y en a un ?  #}
-
 
     <div class="card">
         <img class="card-img-top" src="{{ asset('uploads/pictures/' ~ picture.file ) }}" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">{{ picture.name }}</h5>
+            <h5 class="card-title">{{ picture.name }}</h5>
             <div style="text-align: left;">
                 {{ picture.date ? picture.date|date('Y-m-d') : '' }}
             </div>
-          <p class="card-text">{{ picture.description }}</p>
+            <p class="card-text">{{ picture.description }}</p>
 
-          <div style="text-align: right">
-                <a class="button" href="{{ path('dashboard_picture_edit', {'plantId' : selectedPlant.id, 'id': picture.id}) }}">Edit photo</a>
-            {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
+            <div style="text-align: right">
+                <a class="button" href="{{ path('dashboard_picture_edit', {'plantId' : selectedPlant.id, 'id': picture.id}) }}">Edit</a> 
+                {{ include('dashboard/_partials/_picture-delete-form.html.twig') }}
+                <a class="button" href="{{ path('dashboard_picture_new', {'plantId' : selectedPlant.id}) }}">Add another picture</a>
             </div>
-
         </div>
-      </div>
-
+    </div>
 
 {% endblock %}
