--- a/templates/dashboard/plant/edit.html.twig
+++ b/templates/dashboard/plant/edit.html.twig
@@ -14,14 +14,17 @@
 {% block title %}Edit {{plant.name}}{% endblock %}
 
 {% block body %}
+    
+
+    <div class="return">
+        <a class="button" href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">Plant infos</a>
+    </div>
+
     <h1>Edit {{plant.name}}</h1>
 
-    {{ include('dashboard/_partials/_plant-edit-form.html.twig', {'button_label': 'CUITAS LAS CAROTTAS'}) }}
-    <br>
-    <a href="{{ path('dashboard_plants') }}">back to plant list</a>
-     || 
-    <a href="{{ path('dashboard_plant_show', {'id': plant.id}) }}">see {{plant.name}} infos</a>
-    <br><br>
+    {{ include('dashboard/_partials/_plant-edit-form.html.twig', {'button_label': 'UPDATE MY PLANT'}) }}
+
+  
     {{ include('dashboard/_partials/_plant-delete-form.html.twig') }}
 
 {% endblock %}
