--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,14 +1,15 @@
 {% extends 'default.html.twig' %}
 
 {% block title %}
-    Page not found
+    404 Page not found
 {% endblock %}
 
 {% block body %}
 <!-- DOC TEMPLATE OVERRIDE https://symfony.com/doc/current/bundles/override.html#templates -->
 <!-- dev access : http://localhost/lettuce-seed/public/_error/404 -->
 
-    <h1><i class="fas fa-tree"></i> Looks like you lost yourself too deep in the wood  </h1>
+    
+    <h1><i class="fas fa-tree"></i> 404 : Looks like you lost yourself too deep in the wood </h1>
     
     <h2>
         Follow this 
