--- a/templates/dashboard/_partials/_picture-edit-form.html.twig
+++ b/templates/dashboard/_partials/_picture-edit-form.html.twig
@@ -17,4 +17,6 @@
     <button class="button">{{ button_label|default('Update') }}</button>
    
 {{ form_end(form) }}
+
+<div class="required-info"><i class="fas fa-star-of-life"></i> Required fields</div>
 </div>
