--- a/templates/dashboard/_partials/_profile-edit-form.html.twig
+++ b/templates/dashboard/_partials/_profile-edit-form.html.twig
@@ -12,3 +12,4 @@
         {% endif %}     
     <button class="button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+<div class="required-info"><i class="fas fa-star-of-life"></i> Required fields</div>
