--- a/templates/dashboard/_partials/_picture-new-form.html.twig
+++ b/templates/dashboard/_partials/_picture-new-form.html.twig
@@ -12,4 +12,6 @@
 
         <button class="button">{{ button_label|default('New') }}</button>
     {{ form_end(form) }}
+
+    <div class="required-info"><i class="fas fa-star-of-life"></i> Required fields</div>
 </div>
