--- a/templates/dashboard/_partials/_plant-new-form.html.twig
+++ b/templates/dashboard/_partials/_plant-new-form.html.twig
@@ -3,4 +3,4 @@
     <button class="button">{{ button_label|default('Update') }}</button>
     
 {{ form_end(form) }}
-
+<div class="required-info"><i class="fas fa-star-of-life"></i> Required fields</div>
