--- a/templates/_partials/components/_footer.html.twig
+++ b/templates/_partials/components/_footer.html.twig
@@ -7,10 +7,9 @@
           <h2 class="ftco-heading-2">About lettuce seed</h2>
           <div class="block-23">
             <ul>
-              {# TODO CHANGER CA LA ET REFAIRE L'INDENTATION  #}
-              <li><span class="icon icon-map-marker"></span><span class="text">Technologies used</span></li>
-              <li><a href="#"><span class="icon icon-phone"></span><span class="text">Github repository</span></a></li>
-              <li><a href="#"><span class="icon icon-envelope"></span><span class="text">Contact me</span></a></li>
+              <li><span class="icon bi bi-tools"></span><span class="text">Technologies used : Bootstrap, Jquery, DataTable, Twig, Doctrine, Symfony, Git &amp; VsCode</span></li>
+              <li><span class="icon bi-github"></span><span class="text"><a href="https://github.com/clemence-ctt/lettuce-seed">Github repository</a></span></li>
+              <li><span class="icon icon-envelope"></span><a href="#"><span class="text">Contact me</span></a></li>
             </ul>
           </div>
         </div>
@@ -21,7 +20,7 @@
 
         <p>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>
+          Copyright Lettuce Corp&copy; <script>
             document.write(new Date().getFullYear());
           </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a
             href="https://colorlib.com" target="_blank">Colorlib</a>
