--- a/templates/member/signup-success.html.twig
+++ b/templates/member/signup-success.html.twig
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block body %}
-<br>
-You win
-<a href="{{ path('security_login') }}">Login</a>
 
-
+    <h1><i class="fas fa-tree"></i> Congrats, you're now ready to <a href="{{ path('security_login') }}">log in</a> ! </h1>
+    
 {% endblock %}
 
 
