--- a/templates/openspace/index.html.twig
+++ b/templates/openspace/index.html.twig
@@ -21,7 +21,7 @@
         <div>
             Ever dreamt of a nice board to keep your garden diary tidy and see all your plants in a glance ?
             This place is made for you ! Come and join a friendly community of organised gardeners :)
-            Take picture, keep note of everything that's going and share your gallery with friends !
+            Take pictures, keep notes of everything — growth, blossoming, disease, weather... — and share your gallery with your friends !
         </div>
 
         <div class="cta">
