--- a/templates/_partials/components/_menu-connected.html.twig
+++ b/templates/_partials/components/_menu-connected.html.twig
@@ -26,7 +26,8 @@
         <li><a href="{{ path('dashboard_plants') }}">My plants</a></li>
         <li><a href="{{ path('security_logout') }}">Logout</a></li>
 
-        {# If he's not, show the login button //useless here  #}
+        {# If he's not, show the login button #}
+        <!-- LATER UU-TEMPLATE useless here -->
         {% else %}
         <li><a href="{{ path('security_login') }}">Login</a></li>
         <li><a href="{{ path('member_signup') }}">Sign up</a></li>
