--- a/templates/dashboard/_partials/_picture-edit-form.html.twig
+++ b/templates/dashboard/_partials/_picture-edit-form.html.twig
@@ -8,7 +8,7 @@
     {{ form_row(form.description) }}
     {{ form_row(form.date) }}
     {{ form_row(form.file) }} 
-        {# Décommenter si edit form = new form #}
+        {# LATER EDIT-FORM-TPL ??? un-comment if edit form = new form #}
         {# {% if form.vars.data is not null and form.vars.data.file is not null %} #}
         <img src="{{ asset('uploads/pictures/' ~ oldPictureFile) }}"/>
         {# {% endif %} #}
