--- a/templates/dashboard/plant/new.html.twig
+++ b/templates/dashboard/plant/new.html.twig
@@ -18,7 +18,6 @@
 
     <h1>Create new Plant</h1>
 
-    {{ include('dashboard/_partials/_plant-new-form.html.twig', {'button_label': 'ALEA JACTA EST'}) }}
+    {{ include('dashboard/_partials/_plant-new-form.html.twig', {'button_label': 'ADD THIS PLANT'}) }}
 
-    <br> <a href="{{ path('dashboard_plants') }}">back to plant list</a>
 {% endblock %}
