--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -3,7 +3,9 @@
 
 <head>
     {{ include('_partials/_head.html.twig') }}
-    <title> {% block title %}{% endblock %} — Lettuce Seed </title>
+    <title> 
+        {% block title %}{% endblock %} — Lettuce Seed 
+    </title>
 </head>
 
 
