--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,6 +27,7 @@
     >
 
     {#
+        LATER REMEMBER-ME 
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
     #}
